# staticgrad

./: .gitignore  CMakeLists.txt  Makefile  README.md
StaticGrad/include/: classes.hpp  datastream.hpp  gpt2.hpp  inference.hpp  interface.hpp  node.hpp  optimizer.hpp  tokenizer.hpp  utils.hpp
StaticGrad/src/: classes.cpp  datastream.cpp  gpt2.cpp  inference.cpp  interface.cpp  node.cpp  tokenizer.cpp  utils.cpp
cmake/: StaticGradConfig.cmake.in
gpt2_python/: environment.yml
gpt2_python/scripts/: gpt2_python.py  gpt2_vocab.py  tinyshakespeare.py  tinystories.py
include/: classes.hpp  datastream.hpp  gpt2.hpp
models/: gpt2_python.py  gpt2_weights.py
src/: classes.cpp  classes.hpp  datastream.cpp  gpt2.cpp  gpt2.hpp  utils.cpp
test/: add_test.cpp  att_test.cpp  datastream_test.cpp  encoder_test.cpp  gpt2_test.cpp  layernorm_test.cpp  matmul_test.cpp  softmax_test.cpp  test.cpp  testcolumnadd.cpp  testransmatmul.cpp  testsoftmax.cpp  transformerblock_test.cpp  utils_test.cpp
test/include/: test_common.hpp
test/src/: add_test.cpp  att_test.cpp  datastream_test.cpp  embedding_test.cpp  encoder_test.cpp  gpt2_test.cpp  inference_test.cpp  interface_test.cpp  layernorm_test.cpp  matmul_test.cpp  softmax_test.cpp  test_common.cpp  tokenizer_test.cpp  train_test.cpp  transformerblock_test.cpp  utils_test.cpp
tokenizer/: gpt2_vocab.py  tinyshakespeare.py  tinystories.py
